akn/06_Networking_Services/01_dnstest.yml
apiVersion: v1
kind: Pod
metadata:
  name: dnstest
spec:
  containers:
  - name: busyboxpod
    image: radial/busyboxplus:curl
    command: ['sh', '-c', 'while true; do sleep 3600; done']
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-dnstest
spec:
  containers:
  - name: nginx
    image: nginx:1.19.2
    ports:
    - containerPort: 80
