akn/06_Networking_Services/06-depl-svc-ex.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deploy-svc-ex
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-deploy-svc
  template:
    metadata:
      labels:
        app: my-deploy-svc
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.1
        ports:
        - containerPort: 80
