akn/06_Networking_Services/08_svc-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: svc-test-busybox
spec:
  containers:
  - name: busybox
    image: radial/busyboxplus:curl
    command: ['sh', '-c', 'while true; do sleep 5; done']
