akn/06_Networking_Services/07_cluserip_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: my-deploy-svc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
