akn/06_Networking_Services/09_nodeport_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: np-svc
spec:
  type: NodePort
  selector:
    app: my-deploy-svc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
