akn/06_Networking_Services/05-np-NPallow.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-nwpol
  namespace: np-test
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
  - Egress
